[gd_scene load_steps=2 format=1]

[ext_resource path="res://scenes/HeroDebugMenu/HeroDebugParam/HeroDebugParam.gd" type="Script" id=1]

[node name="HeroDebugParam" type="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 86.0
margin/bottom = 33.0
custom_constants/separation = 2
alignment = 0
script/script = ExtResource( 1 )

[node name="ParamName" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 86.0
margin/bottom = 14.0
text = "SPEED"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ValueSpinner" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 16.0
margin/right = 86.0
margin/bottom = 40.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="ValueSlider" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 42.0
margin/right = 86.0
margin/bottom = 58.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 60.0
margin/right = 86.0
margin/bottom = 63.0

[connection signal="value_changed" from="ValueSpinner" to="." method="_on_ValueSpinner_value_changed"]

[connection signal="value_changed" from="ValueSlider" to="." method="_on_ValueSlider_value_changed"]


